# DRF-setup

./: .gitignore  pyproject.toml
app/api/: serializers.py  views.py
app/api/migrations/: 0001_initial.py
app/app/: settings.py
